# databricks-dabs-demo-simple

./: .env  databricks.yml  nyc_taxi_model_register_uc.py  pyproject.toml
.github/workflows/: prod.yml  qa.yml
data/: nyctaxi_zipcode.csv
mlops_stacks/.github/workflows/: mlops_stacks-bundle-cd-prod.yml
mlops_stacks/mlops_stacks/: databricks.yml
resources/: notebook_task.yml  python_wheel_task.yml  spark_python_task.yml
src/: dlt_pipeline.py  notebook.ipynb
src/my_package/: get_spark.py  main.py  my_module.py
